fixed scrollbar overflow

--- a/src/js/main.css
+++ b/src/js/main.css
@@ -1,3 +1,7 @@
+* {
+  overflow: hidden !important;
+}
+
 
 html, body {
   background-color: black;
